<resources>

    <string name="start_like_pro">Start like a Pro</string>
    <string name="buy_pro_version_to_unlock_all_features">Buy Pro version to unlock all Features</string>
    <string name="pro">Pro</string>
    <string name="remove_native_ads">Remove Native Ads</string>
    <string name="remove_banner_ads">Remove Banner Ads</string>
    <string name="remove_interstitial_ads">Remove Interstitial Ads</string>
    <string name="vip_customer_support">VIP Customer Support</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="subscription_will_auto_renew">Subscription will auto renew</string>
    <string name="basic">Basic</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="after_free">after free</string>
    <string name="trial">trial</string>
    <string name="month">Month</string>

    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="day">day</string>

    <string name="_90_00_month_after_1_week_free_trail">₹90.00/Month After 1 Week Free Trial</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_desc">Please check your internet. We need internet to check your subscription history</string>
    <string name="ok">OK</string>
    <string name="ads">Ads</string>

    <string name="google_subs_terms">This app gives you unlimited access to all features and materials without ads. The subscription is billed weekly, yearly or monthly (as shown above) automatically after the free trial (if available) and charged through GooglePlay. Cancellation during the free trial will not be charged. For billed period cancellation, please visit GooglePlay 24 hours in advance</string>
</resources>