<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_margin="30dp"
        android:background="@drawable/bg_corner_10"
        android:paddingTop="40dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_wow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/no_internet"
            android:textColor="@color/subs_primary_color"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_size_compressed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/no_internet_desc"
            android:textColor="@color/lib_grey_4"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_wow" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_corner_10"
            android:backgroundTint="@color/subs_primary_color"

            android:elevation="6dp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="6dp"

            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/lib_white"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_compressed" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"

        app:cardBackgroundColor="@color/subs_primary_color"
        app:cardCornerRadius="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_internet"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>